# VapourSynth-TDeintMod

./: GNUmakefile  Makefile.am  README.md  configure  configure.ac  meson.build
TDeintMod/: TDeintMod.cpp  TDeintMod.hpp  TDeintMod.vcxproj  TDeintMod.vcxproj.filters  TDeintMod_AVX2.cpp  TDeintMod_SSE2.cpp
TDeintMod/vectorclass/: vectorclass.h  vectorf128.h  vectorf256.h  vectori128.h
